crates/solidity-v2/testing/snapshots/diagnostics_output/structure/invalid_using_directive_container/contract/input.sol
// SPDX-License-Identifier: MIT
pragma solidity *;

library L {}

contract C {
    using L for uint256;
}
